frontend/tests/cases/positive/synInstanceEmptyWithConstraints.gr
-- empty instance with constraints
data A a = A

interface Simple a

instance {Simple a} => Simple (A a)
